--- a/copy/.gitconfig
+++ b/copy/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-  name = Ben Alman
+  name = Matthew Denaburg
   email = EMAIL
 [core]
   autocrlf = input
@@ -18,7 +18,6 @@
   rb = rbranch
   rv = review
   st = status
-  ksdiff = difftool -y -t Kaleidoscope
 [branch "master"]
   remote = origin
   merge = refs/heads/master
@@ -41,8 +40,6 @@
   default = simple
 [merge]
   log = true
-[difftool "Kaleidoscope"]
-  cmd = ksdiff-wrapper git \"$LOCAL\" \"$REMOTE\"
 [rerere]
   enabled = 1
 [url "git@github.com:"]
@@ -57,5 +54,3 @@
   pushInsteadOf = "git://gist.github.com/"
 [url "git://gist.github.com/"]
   insteadOf = "gist:"
-[url "git@heroku.com:"]
-  insteadOf = "heroku:"
