moved .gitconfig to $DOTFILES/link/ and created include for personal info

--- a/link/.gitconfig
+++ b/link/.gitconfig
@@ -1,6 +1,5 @@
-[user]
-  name = Matthew Denaburg
-  email = EMAIL
+[include]
+  path = ~/.gitconfig.inc
 [core]
   autocrlf = input
   whitespace = fix,space-before-tab,tab-in-indent,trailing-space
