--- a/link/.gitconfig
+++ b/link/.gitconfig
@@ -18,11 +18,17 @@
   rb = rbranch
   rv = review
   st = status
+
+  ldl = log --pretty=color --decorate --date=short --graph --numstat
+  lds = log --pretty=color --decorate --date=short --graph
 [branch "master"]
   remote = origin
   merge = refs/heads/master
 [color]
   ui = auto
+[pretty]
+  color   = format:"%C(yellow)%h %ad%Cred%d %Creset%s%Cgreen [%cn]"
+  nocolor = format:"%h %ad %an: %s%d"
 [color "branch"]
   current = yellow reverse
   local = yellow
