bindings to resize panes

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -37,6 +37,15 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# use the vim resize keys.
+# the number at the end is how much the pane will be resized,
+# and 1 is fairly small -- you might want to tweak this.
+bind < resize-pane -L 1
+bind > resize-pane -R 1
+bind - resize-pane -D 1
+bind + resize-pane -U 1
+
+
 
 # # edit configuration
 # bind e new-window -n 'tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
