--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -27,6 +27,7 @@ set -g display-panes-active-colour brightgreen
 set -g display-panes-colour blue
 
 # https://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/#comment-1234
+# {{{
 unbind %
 bind s split-window -v
 bind v split-window -h
@@ -44,14 +45,30 @@ bind < resize-pane -L 1
 bind > resize-pane -R 1
 bind - resize-pane -D 1
 bind + resize-pane -U 1
+# }}}
 
+# # status bar changes
+set -g status-bg green
+set -g status-fg black
 
+# Set window notifications
+setw -g monitor-activity on
+set -g visual-activity on
+# set-window-option -g window-status-current-bg red
 
 # # edit configuration
 # bind e new-window -n 'tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
 
 # reload configuration
+unbind r
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+
+
+
+
+
+
+
 
 # # Ensure pbpaste/pbcopy work in OSX
 # # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
