--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -2,18 +2,18 @@
 
 # PREFIX
 set -g prefix2 C-a                                      # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+bind C-a send-prefix -2					# set prefix as 2nd option
 
 # GENERAL
 set -gq status-utf8 on                                  # Expect UTF-8 (tmux < 2.2)
 set -gq utf8 on
-set -s escape-time 0                                    # Fastest command sequences
-set -sg repeat-time 600                                 # Increase repeat timeout
-set -s focus-events on
-set -g status-interval 2                                # Update status frequently
-set -g history-limit 50000                              # Increase history size
-set -g mouse on                                         # Enable mouse mode
-set -g renumber-windows on                              # Renumber windows whenever any window is closed
+set -s  escape-time 0                                   # Fastest command sequences
+set -gs repeat-time 600                                 # Increase repeat timeout
+set -s  focus-events on
+set -g  status-interval 2                               # Update status frequently
+set -g  history-limit 50000                             # Increase history size
+set -g  mouse on                                        # Enable mouse mode
+set -g  renumber-windows on                             # Renumber windows whenever any window is closed
 
 setw -g xterm-keys on
 setw -g aggressive-resize on
@@ -23,12 +23,9 @@ setw -g aggressive-resize on
 set -g default-terminal "tmux-256color"                 # Color and italics!
 set -as terminal-overrides ',xterm*:sitm=\E[3m'         # OS X only?
 
-set -g display-panes-active-colour brightgreen
-set -g display-panes-colour blue
-
-# https://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/#comment-1234
-# {{{
-unbind %
+# change some bindings.
+# src: https://blog.hawkhost.com/2010/07/02/tmux/#comment-1234
+## split re-binding
 bind s split-window -v
 bind v split-window -h
 
@@ -45,34 +42,28 @@ bind < resize-pane -L 1
 bind > resize-pane -R 1
 bind - resize-pane -D 1
 bind + resize-pane -U 1
-# }}}
 
-# # status bar changes
+# status bar colors
 set -g status-bg green
 set -g status-fg black
 
 # Set window notifications
-setw -g monitor-activity on
-set -g visual-activity on
-# set-window-option -g window-status-current-bg red
+set-window-option -g monitor-activity on
+set-option 	  -g visual-activity  on
+set-window-option -g window-status-current-style  bg=brightblue
+set-window-option -g window-status-activity-style bg=brightred
 
-# # edit configuration
-# bind e new-window -n 'tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
-
+# edit configuration
+bind e new-window -n 'tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
 # reload configuration
 unbind r
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 
 
-
-
-
-
-
-# # Ensure pbpaste/pbcopy work in OSX
-# # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-# if 'test "$(uname -s)" = Darwin' 'set -g default-command "exec reattach-to-user-namespace -l $SHELL"'
+# Ensure pbpaste/pbcopy work in OSX
+# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+if 'test "$(uname -s)" = Darwin' 'set -g default-command "exec reattach-to-user-namespace -l $SHELL"'
 
 # # Ensure 2nd column in the main-vertical layout is 80 chars wide
 # set -g other-pane-width 80
