various; see notes
changes:
- formatting
- fix some comments
- uncomment vim integratino helper
- uncomment various pane/window/session keybinds

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -1,5 +1,3 @@
-# source "$POWERLINE_PREFIX/bindings/tmux/powerline.conf"
-
 # PREFIX
 set -g prefix2 C-a                                      # GNU-Screen compatible prefix
 bind C-a send-prefix -2					# set prefix as 2nd option
@@ -20,12 +18,12 @@ setw -g aggressive-resize on
 
 # https://github.com/tmux/tmux/issues/435#issuecomment-226849415
 # http://joehanchoi.com/quick-fixes-for-tmux-2-1-on-osx/
-set -g default-terminal "tmux-256color"                 # Color and italics!
+set -g  default-terminal   "tmux-256color"              # Color and italics!
 set -as terminal-overrides ',xterm*:sitm=\E[3m'         # OS X only?
 
 # change some bindings.
 # src: https://blog.hawkhost.com/2010/07/02/tmux/#comment-1234
-## split re-binding
+# split re-binding
 bind s split-window -v
 bind v split-window -h
 
@@ -47,6 +45,8 @@ bind + resize-pane -U 1
 set -g status-bg green
 set -g status-fg black
 
+set -g pane-active-border-style fg=brightblue
+
 # Set window notifications
 set-window-option -g monitor-activity on
 set-option 	  -g visual-activity  on
@@ -65,49 +65,46 @@ bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 if 'test "$(uname -s)" = Darwin' 'set -g default-command "exec reattach-to-user-namespace -l $SHELL"'
 
-# # Ensure 2nd column in the main-vertical layout is 80 chars wide
-# set -g other-pane-width 80
+# vim-tmux integration helper
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-# # vim-tmux integration helper
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# Ctrl-Left/Right/Up/Down              Move focus among splits
+bind-key -n C-Up    if "$is_vim" "send C-Up"    "select-pane -U"
+bind-key -n C-Down  if "$is_vim" "send C-Down"  "select-pane -D"
+bind-key -n C-Left  if "$is_vim" "send C-Left"  "select-pane -L"
+bind-key -n C-Right if "$is_vim" "send C-Right" "select-pane -R"
+# Ctrl-\                               Last pane
+bind-key -n C-\     if "$is_vim" "send C-\\"    "select-pane -l"
 
-# # Ctrl-Left/Right/Up/Down              Move focus among splits
-# bind-key -n C-Up    if "$is_vim" "send C-Up"    "select-pane -U"
-# bind-key -n C-Down  if "$is_vim" "send C-Down"  "select-pane -D"
-# bind-key -n C-Left  if "$is_vim" "send C-Left"  "select-pane -L"
-# bind-key -n C-Right if "$is_vim" "send C-Right" "select-pane -R"
-# # Ctrl-\                               Last pane
-# bind-key -n C-\     if "$is_vim" "send C-\\"    "select-pane -l"
+# Ctrl-Shift-Left/Right/Up/Down        Resize the current split by 1
+bind-key -n C-S-Up    display-panes \; resize-pane -U 1
+bind-key -n C-S-Down  display-panes \; resize-pane -D 1
+bind-key -n C-S-Left  display-panes \; resize-pane -L 1
+bind-key -n C-S-Right display-panes \; resize-pane -R 1
 
-# # Ctrl-Shift-Left/Right/Up/Down        Resize the current split by 1
-# bind-key -n C-S-Up display-panes \; resize-pane -U 1
-# bind-key -n C-S-Down display-panes \; resize-pane -D 1
-# bind-key -n C-S-Left display-panes \; resize-pane -L 1
-# bind-key -n C-S-Right display-panes \; resize-pane -R 1
+# Alt-Up                               Zoom pane in/out
+bind-key -n M-Up resize-pane -Z
 
-# # Alt-Up                               Zoom pane in/out
-# bind-key -n M-Up resize-pane -Z
+# Alt-Down                             Cycle through layouts
+bind-key -n M-Down display-panes \; next-layout
 
-# # Alt-Down                             Cycle through layouts
-# bind-key -n M-Down display-panes \; next-layout
+# Alt-,/.                              Move focus among windows
+bind-key -n M-, select-window -p       # previous window
+bind-key -n M-. select-window -n       # next window
 
-# # Alt-,/.                              Move focus among windows
-# bind-key -n M-, previous-window
-# bind-key -n M-. next-window
+# Alt-[/]                              Move focus among sessions
+bind-key -n M-[ switch-client -p
+bind-key -n M-] switch-client -n
 
-# # Alt-[/]                              Move focus among sessions
-# bind-key -n M-[ switch-client -p
-# bind-key -n M-] switch-client -n
-
-# # Alt-Shift-Left/Right/Up/Down         Create a new split in the given direction
-# bind-key -n M-S-Left split-window -h -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
-# bind-key -n M-S-Up split-window -v -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
-# bind-key -n M-S-Right display-panes \; split-window -h -c "#{pane_current_path}"
-# bind-key -n M-S-Down display-panes \; split-window -v -c "#{pane_current_path}"
+# Alt-Shift-Left/Right/Up/Down         Create a new split in the given direction
+bind-key -n M-S-Left                   split-window -h -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
+bind-key -n M-S-Up                     split-window -v -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
+bind-key -n M-S-Right display-panes \; split-window -h -c "#{pane_current_path}"
+bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
 
 # # Alt-BackSpace/Delete                 Kill current focused split
-# bind-key -n M-DC kill-pane
+# bind-key -n M-DC     kill-pane
 # bind-key -n M-BSpace kill-pane
 
 # #    Shift-F7                     Save history to $BYOBU_RUN_DIR/printscreen
