ignore /link/.tmux/resurrect

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 /link/.vim/.netrwhist
 # Don't commit tmux plugins, tpm will install them.
 /link/.tmux/plugins
+# don't commit tmux resurrect files, either
+/link/.tmux/resurrect
 
 # Ignore any file with LOCAL in the name (good for per-machine vars/functions)
 *LOCAL*
