--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -185,6 +185,11 @@ bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-boot 'on'
+set -g @continuum-restore 'on'
+set -g @continuum-boot-options 'iterm'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
