--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,6 @@
-
+[submodule "git-extras"]
+	path = vendor/git-extras
+	url = https://github.com/tj/git-extras.git
+[submodule "diff-so-fancy"]
+	path = vendor/diff-so-fancy
+	url = https://github.com/so-fancy/diff-so-fancy.git
