--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".tmux-tpm"]
   path = link/.tmux/plugins/tpm
   url = https://github.com/tmux-plugins/tpm.git
+[submodule "diff-so-fancy"]
+	path = vendor/diff-so-fancy
+	url = https://github.com/so-fancy/diff-so-fancy.git
