--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vendor/vim-plug"]
 	path = vendor/vim-plug
 	url = https://github.com/junegunn/vim-plug.git
+[submodule "tmux plugins"]
+	path = link/.tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
