--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -186,6 +186,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+
+set -g @sidebar-tree-command 'tree -C -a -I ".cache|.git*" -L 10'
 
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
