--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -21,6 +21,11 @@ setw -g aggressive-resize on
 set -g  default-terminal   "tmux-256color"              # Color and italics!
 set -as terminal-overrides ',xterm*:sitm=\E[3m'         # OS X only?
 
+# start windows and pane index at 1 not 0
+set  -g base-index 1
+setw -g pane-base-index 1
+
+
 # change some bindings.
 # src: https://blog.hawkhost.com/2010/07/02/tmux/#comment-1234
 # split re-binding
@@ -58,6 +63,8 @@ bind e new-window -n 'tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux
 # reload configuration
 unbind r
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+
+set -g status-right 'Continuum status: #{continuum_status}'
 
 
 
@@ -102,6 +109,7 @@ bind-key -n M-S-Left                   split-window -h -c "#{pane_current_path}"
 bind-key -n M-S-Up                     split-window -v -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
 bind-key -n M-S-Right display-panes \; split-window -h -c "#{pane_current_path}"
 bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
+
 
 # # Alt-BackSpace/Delete                 Kill current focused split
 # bind-key -n M-DC     kill-pane
@@ -183,10 +191,10 @@ bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @sidebar-tree-command 'tree -C -a -I ".cache|.git*" -L 10'
 
