remote.origin.push = HEAD

--- a/link/.gitconfig
+++ b/link/.gitconfig
@@ -60,3 +60,5 @@
   pushInsteadOf = "git://gist.github.com/"
 [url "git://gist.github.com/"]
   insteadOf = "gist:"
+[remote "origin"]
+  push = HEAD
