--- a/link/.ssh/config
+++ b/link/.ssh/config
@@ -4,3 +4,7 @@
 Host bitbucket.org
     Hostname bitbucket.org
     IdentityFile ~/.ssh/id_bitbucket
+host 192.168.1.156
+    HostName Matthew-Denaburg-Laptop
+    IdentityFile ~/.ssh/id_windows.pub
+    user git
