30 minute autosave interval

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -191,8 +191,8 @@ bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
@@ -201,6 +201,7 @@ set -g @sidebar-tree-command 'tree -C -a -I ".cache|.git*" -L 10'
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 set -g @continuum-boot-options 'iterm'
+set -g @continuum-save-interval '30'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
