--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -1,17 +1,17 @@
 # PREFIX
-set -g prefix2 C-a                                      # GNU-Screen compatible prefix
-bind C-a send-prefix -2					# set prefix as 2nd option
+set -g prefix2 C-a                 # GNU-Screen compatible prefix
+bind C-a send-prefix -2            # set prefix as 2nd option
 
 # GENERAL
-set -gq status-utf8 on                                  # Expect UTF-8 (tmux < 2.2)
+set -gq status-utf8 on             # Expect UTF-8 (tmux < 2.2)
 set -gq utf8 on
-set -s  escape-time 0                                   # Fastest command sequences
-set -gs repeat-time 600                                 # Increase repeat timeout
+set -s  escape-time 0              # Fastest command sequences
+set -gs repeat-time 600            # Increase repeat timeout
 set -s  focus-events on
-set -g  status-interval 2                               # Update status frequently
-set -g  history-limit 50000                             # Increase history size
-set -g  mouse on                                        # Enable mouse mode
-set -g  renumber-windows on                             # Renumber windows whenever any window is closed
+set -g  status-interval 2          # Update status frequently
+set -g  history-limit 50000        # Increase history size
+set -g  mouse on                   # Enable mouse mode
+set -g  renumber-windows on        # Renumber windows whenever any window is closed
 
 setw -g xterm-keys on
 setw -g aggressive-resize on
@@ -49,8 +49,7 @@ bind + resize-pane -U 1
 # status bar colors
 set -g status-bg green
 set -g status-fg black
-
-set -g pane-active-border-style fg=brightblue
+set -g pane-active-border-style fg=brightblue      # border of active pane
 
 # Set window notifications
 set-window-option -g monitor-activity on
