set focus-events change

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -7,7 +7,7 @@ set -gq status-utf8 on             # Expect UTF-8 (tmux < 2.2)
 set -gq utf8 on
 set -s  escape-time 0              # Fastest command sequences
 set -gs repeat-time 600            # Increase repeat timeout
-set -s  focus-events on
+set -gs focus-events on
 set -g  status-interval 2          # Update status frequently
 set -g  history-limit 50000        # Increase history size
 set -g  mouse on                   # Enable mouse mode
