--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -92,16 +92,16 @@ bind-key -n C-S-Right display-panes \; resize-pane -R 1
 # Alt-Up                               Zoom pane in/out
 bind-key -n M-Up resize-pane -Z
 
-# Alt-Down                             Cycle through layouts
-bind-key -n M-Down display-panes \; next-layout
+# # Alt-Down                             Cycle through layouts
+# bind-key -n M-Down display-panes \; next-layout
 
-# Alt-,/.                              Move focus among windows
-bind-key -n M-, select-window -p       # previous window
-bind-key -n M-. select-window -n       # next window
+# # Alt-,/.                              Move focus among windows
+# bind-key -n M-, select-window -p       # previous window
+# bind-key -n M-. select-window -n       # next window
 
-# Alt-[/]                              Move focus among sessions
-bind-key -n M-[ switch-client -p
-bind-key -n M-] switch-client -n
+# # Alt-[/]                              Move focus among sessions
+# bind-key -n M-[ switch-client -p
+# bind-key -n M-] switch-client -n
 
 # Alt-Shift-Left/Right/Up/Down         Create a new split in the given direction
 bind-key -n M-S-Left                   split-window -h -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
@@ -127,8 +127,8 @@ bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
 
 # # F1                                   Used by X11
 
-# # Shift-F1
-# bind-key -n S-F1 new-window -k -n "tmux help" "man tmux"
+# Shift-F1
+bind-key -n S-F1 new-window -k -n "tmux help" "man tmux"
 
 # # F2                                   New window
 # bind-key -n F2 command-prompt -p \
@@ -150,9 +150,9 @@ bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
 
 
 # # Alt-F3                          Expand pane to a full window
-# # bind-key -n M-F3 break-pane
+# bind-key -n M-F3 break-pane
 # # Ctrl-F3                         Join window into a vertical split
-# # bind-key -n C-F3 join-pane -h -s :. -t :-1
+# bind-key -n C-F3 join-pane -h -s :. -t :-1
 
 # # F9                                   Detach session and then logout
 # bind-key -n F9 detach-client
@@ -162,29 +162,29 @@ bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
 # bind-key -n C-F9 detach-client -a
 
 
-# # F10                                  Used by X11
-# # F11                                  Used by X11
+# F10                                  Used by X11
+# F11                                  Used by X11
 
-# # Ctrl-Shift-Left/Right                Swap the current split with another
-# # bind-key -n C-S-Left display-panes \; swap-pane -s :. -t :.- \; select-pane -t :.-
-# # bind-key -n C-S-Right display-panes \; swap-pane -s :. -t :.+ \; select-pane -t :.+
+# Ctrl-Shift-Left/Right                Swap the current split with another
+bind-key -n C-S-Left display-panes \; swap-pane -s :. -t :.- \; select-pane -t :.-
+bind-key -n C-S-Right display-panes \; swap-pane -s :. -t :.+ \; select-pane -t :.+
 
-# # Ctrl-Shift-Up                        Balance panes horizontally
-# # bind-key -n C-S-Up display-panes \; select-layout even-horizontal
+# Ctrl-Shift-Up                        Balance panes horizontally
+bind-key -n C-S-Up display-panes \; select-layout even-horizontal
 
 
-# #  F3/F4                          Move focus among windows
-# # bind-key -n F3 previous-window
-# # bind-key -n F4 next-window
-# #    Shift-F3/F4                  Move focus among splits
-# # bind-key -n S-F3 display-panes \; select-pane -t :.-
-# # bind-key -n S-F4 display-panes \; select-pane -t :.+
-# #    Ctrl-Shift-F3/F4             Move a window
-# # bind-key -n C-S-F3 swap-window -t :-1
-# # bind-key -n C-S-F4 swap-window -t :+1
+# F3/F4                                Move focus among windows
+bind-key -n F3 previous-window
+bind-key -n F4 next-window
+# Shift-F3/F4                          Move focus among splits
+bind-key -n S-F3 display-panes \; select-pane -t :.-
+bind-key -n S-F4 display-panes \; select-pane -t :.+
+# Ctrl-Shift-F3/F4                     Move a window
+bind-key -n C-S-F3 swap-window -t :-1
+bind-key -n C-S-F4 swap-window -t :+1
 
 # #    Alt-F9                       Toggle sending keyboard input to all splits
-# # bind-key -n M-F9 display-panes \; setw synchronize-panes
+# bind-key -n M-F9 display-panes \; setw synchronize-panes
 
 
 
@@ -194,6 +194,9 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+
+set -g @yank_action 'copy-pipe'
 
 set -g @sidebar-tree-command 'tree -C -a -I ".cache|.git*" -L 10'
 
