--- a/link/.gitconfig
+++ b/link/.gitconfig
@@ -21,6 +21,8 @@
 
   ldl = log --pretty=color --decorate --date=short --graph --numstat
   lds = log --pretty=color --decorate --date=short --graph
+  ls = ls-tree --name-only -r
+  lsf = ls-tree --name-only --full-tree -r
 [branch "master"]
   remote = origin
   merge = refs/heads/master
