--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -198,7 +198,7 @@ set -g @plugin 'tmux-plugins/tmux-open'
 
 set -g @yank_action 'copy-pipe'
 
-set -g @sidebar-tree-command 'tree -C -a -I ".cache|.git*" -L 10'
+set -g @sidebar-tree-command 'tree -C -a -I ".cache|.git*" -L 10 --filelimit 30'
 
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
