ssh config changes

--- a/link/.ssh/config
+++ b/link/.ssh/config
@@ -1,6 +1,6 @@
-# Host github
-#     Hostname github.com
-#     IdentityFile ~/.ssh/id_github
+Host github.com
+    Hostname github.com
+    IdentityFile ~/.ssh/id_github
 Host bitbucket.org
     Hostname bitbucket.org
     IdentityFile ~/.ssh/id_bitbucket
