show time on tmux status-right

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -50,6 +50,7 @@ bind + resize-pane -U 1
 set -g status-bg green
 set -g status-fg black
 set -g pane-active-border-style fg=brightblue      # border of active pane
+set -g status-right "#[bg=yellow]%A, %b %d, %Y %I:%M %p" # include time in status-right
 
 # Set window notifications
 set-window-option -g monitor-activity on
@@ -62,8 +63,6 @@ bind e new-window -n 'tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux
 # reload configuration
 unbind r
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
-
-set -g status-right 'Continuum status: #{continuum_status}'
 
 
 
