--- a/link/.pylintrc
+++ b/link/.pylintrc
@@ -3,7 +3,7 @@
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
 # run arbitrary code
-extension-pkg-whitelist=
+extension-pkg-whitelist=gmpy2
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
@@ -151,7 +151,7 @@ evaluation=10.0 - ((float(5 * error + warning + refactor + convention) / stateme
 # Set the output format. Available formats are text, parseable, colorized, json
 # and msvs (visual studio).You can also give a reporter class, eg
 # mypackage.mymodule.MyReporterClass.
-output-format=text
+output-format=parseable
 
 # Tells whether to display a full report or only the messages
 reports=no
@@ -397,7 +397,7 @@ good-names=i,
            j,
            k,
            x,
-           y
+           y,
            ex,
            Run,
            _
