--- a/link/.pylintrc
+++ b/link/.pylintrc
@@ -393,11 +393,8 @@ function-naming-style=snake_case
 #function-rgx=
 
 # Good variable names which should always be accepted, separated by a comma
-good-names=i,
-           j,
-           k,
-           x,
-           y,
+good-names=a,b,c,d,e,f,g,h,i,j,k,l,m,
+           n,o,p,q,r,s,t,u,v,w,x,y,z,
            ex,
            Run,
            _
