--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -58,21 +58,10 @@ set-option 	  -g visual-activity  on
 set-window-option -g window-status-current-style  bg=brightblue
 set-window-option -g window-status-activity-style bg=brightred
 
-# edit configuration
-bind e new-window -n 'tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
-# reload configuration
-unbind r
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
-
-
-# Ensure pbpaste/pbcopy work in OSX
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-if 'test "$(uname -s)" = Darwin' 'set -g default-command "exec reattach-to-user-namespace -l $SHELL"'
 
 # vim-tmux integration helper
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 # Ctrl-Left/Right/Up/Down              Move focus among splits
 bind-key -n C-Up    if "$is_vim" "send C-Up"    "select-pane -U"
@@ -82,25 +71,16 @@ bind-key -n C-Right if "$is_vim" "send C-Right" "select-pane -R"
 # Ctrl-\                               Last pane
 bind-key -n C-\     if "$is_vim" "send C-\\"    "select-pane -l"
 
-# Ctrl-Shift-Left/Right/Up/Down        Resize the current split by 1
-bind-key -n C-S-Up    display-panes \; resize-pane -U 1
-bind-key -n C-S-Down  display-panes \; resize-pane -D 1
-bind-key -n C-S-Left  display-panes \; resize-pane -L 1
-bind-key -n C-S-Right display-panes \; resize-pane -R 1
-
 # Alt-Up                               Zoom pane in/out
 bind-key -n M-Up resize-pane -Z
 
-# # Alt-Down                             Cycle through layouts
-# bind-key -n M-Down display-panes \; next-layout
+# Alt-,/.                              Move focus among windows
+bind-key -n M-, select-window -p       # previous window
+bind-key -n M-. select-window -n       # next window
 
-# # Alt-,/.                              Move focus among windows
-# bind-key -n M-, select-window -p       # previous window
-# bind-key -n M-. select-window -n       # next window
-
-# # Alt-[/]                              Move focus among sessions
-# bind-key -n M-[ switch-client -p
-# bind-key -n M-] switch-client -n
+# Alt-[/]                              Move focus among sessions
+bind-key -n M-[ switch-client -p
+bind-key -n M-] switch-client -n
 
 # Alt-Shift-Left/Right/Up/Down         Create a new split in the given direction
 bind-key -n M-S-Left                   split-window -h -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
@@ -109,22 +89,13 @@ bind-key -n M-S-Right display-panes \; split-window -h -c "#{pane_current_path}"
 bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
 
 
-# # Alt-BackSpace/Delete                 Kill current focused split
-# bind-key -n M-DC     kill-pane
-# bind-key -n M-BSpace kill-pane
-
-# #    Shift-F7                     Save history to $BYOBU_RUN_DIR/printscreen
-# # bind-key -n S-F7 capture-pane -S -32768 \; save-buffer "$BYOBU_RUN_DIR/printscreen" \; delete-buffer \; new-window -n "PRINTSCREEN" "$EDITOR $BYOBU_RUN_DIR/printscreen"
-
-# # Shift-Up                             Enter scrollback mode
-# bind-key -n S-Up    if "$is_vim" "send S-Up" "copy-mode"
-# # Shift-Up/Down                        Copy mode: scroll up/down a half-page at a time
-# bind-key -T copy-mode-vi S-Up send -X halfpage-up
-# bind-key -T copy-mode-vi S-Down send -X halfpage-down
-# # bind-key -T copy-mode-vi
-# # bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "$clipboard_copy_command"
-
-# # F1                                   Used by X11
+# Shift-Up                             Enter scrollback mode
+bind-key -n S-Up    if "$is_vim" "send S-Up" "copy-mode"
+# Shift-Up/Down                        Copy mode: scroll up/down a half-page at a time
+bind-key -T copy-mode-vi S-Up   send -X halfpage-up
+bind-key -T copy-mode-vi S-Down send -X halfpage-down
+# bind-key -T copy-mode-vi
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "$clipboard_copy_command"
 
 # Shift-F1
 bind-key -n S-F1 new-window -k -n "tmux help" "man tmux"
@@ -133,10 +104,11 @@ bind-key -n S-F1 new-window -k -n "tmux help" "man tmux"
 # bind-key -n F2 command-prompt -p \
 #   "[New window] Enter name or Ctrl-C to cancel:" \
 #   "new-window -c '#{pane_current_path}'; run-shell 'a=%%; tmux rename-window \${a:--}'"
-# # Shift-F2                             Rename window
-# bind-key -n S-F2 command-prompt -p \
-#   "[Rename window] Enter name or Ctrl-C to cancel (current=#W):" \
-#   "run-shell 'a=%%; tmux rename-window \${a:-#W}'"
+
+# Shift-F2                             Rename window
+bind-key -n S-F2 command-prompt -p \
+  "[Rename window] Enter name or Ctrl-C to cancel (current=#W):" \
+  "run-shell 'a=%%; tmux rename-window \${a:-#W}'"
 
 # # F3                                   New session
 # bind-key -n F3 command-prompt -p \
@@ -153,19 +125,9 @@ bind-key -n S-F1 new-window -k -n "tmux help" "man tmux"
 # # Ctrl-F3                         Join window into a vertical split
 # bind-key -n C-F3 join-pane -h -s :. -t :-1
 
-# # F9                                   Detach session and then logout
-# bind-key -n F9 detach-client
-# # Shift-F9                             Detach session and do not logout
-# bind-key -n S-F9 run-shell "exec touch $DOTFILES/caches/tmux-no-logout" \; detach
-# # Ctrl-F9                              Detach all clients but the current one
-# bind-key -n C-F9 detach-client -a
-
-
-# F10                                  Used by X11
-# F11                                  Used by X11
 
 # Ctrl-Shift-Left/Right                Swap the current split with another
-bind-key -n C-S-Left display-panes \; swap-pane -s :. -t :.- \; select-pane -t :.-
+bind-key -n C-S-Left  display-panes \; swap-pane -s :. -t :.- \; select-pane -t :.-
 bind-key -n C-S-Right display-panes \; swap-pane -s :. -t :.+ \; select-pane -t :.+
 
 # Ctrl-Shift-Up                        Balance panes horizontally
@@ -173,8 +135,8 @@ bind-key -n C-S-Up display-panes \; select-layout even-horizontal
 
 
 # F3/F4                                Move focus among windows
-bind-key -n F3 previous-window
-bind-key -n F4 next-window
+bind-key -n C-F3 previous-window
+bind-key -n C-F4 next-window
 # Shift-F3/F4                          Move focus among splits
 bind-key -n S-F3 display-panes \; select-pane -t :.-
 bind-key -n S-F4 display-panes \; select-pane -t :.+
@@ -182,8 +144,8 @@ bind-key -n S-F4 display-panes \; select-pane -t :.+
 bind-key -n C-S-F3 swap-window -t :-1
 bind-key -n C-S-F4 swap-window -t :+1
 
-# #    Alt-F9                       Toggle sending keyboard input to all splits
-# bind-key -n M-F9 display-panes \; setw synchronize-panes
+#    Alt-F9                       Toggle sending keyboard input to all splits
+bind-key -n M-F9 display-panes \; set-window-option synchronize-panes
 
 
 
