--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -1,6 +1,6 @@
 # PREFIX
-set -g prefix2 C-a                 # GNU-Screen compatible prefix
-bind C-a send-prefix -2            # set prefix as 2nd option
+unbind C-b
+set -g prefix C-a                  # GNU-Screen compatible prefix
 
 # GENERAL
 set -gq status-utf8 on             # Expect UTF-8 (tmux < 2.2)
@@ -15,6 +15,12 @@ set -g  renumber-windows on        # Renumber windows whenever any window is clo
 
 setw -g xterm-keys on
 setw -g aggressive-resize on
+
+# Set parent terminal title to reflect current window in tmux session 
+set -g set-titles on
+set -g set-titles-string "#I:#W"
+
+
 
 # https://github.com/tmux/tmux/issues/435#issuecomment-226849415
 # http://joehanchoi.com/quick-fixes-for-tmux-2-1-on-osx/
@@ -38,26 +44,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# use the vim resize keys.
-# the number at the end is how much the pane will be resized,
-# and 1 is fairly small -- you might want to tweak this.
-bind < resize-pane -L 1
-bind > resize-pane -R 1
-bind - resize-pane -D 1
-bind + resize-pane -U 1
-
-# status bar colors
-set -g status-bg green
-set -g status-fg black
-set -g pane-active-border-style fg=brightblue      # border of active pane
-set -g status-right "#[bg=yellow]%A, %b %d, %Y %I:%M %p" # include time in status-right
-
-# Set window notifications
-set-window-option -g monitor-activity on
-set-option 	  -g visual-activity  on
-set-window-option -g window-status-current-style  bg=brightblue
-set-window-option -g window-status-activity-style bg=brightred
-
 
 
 # vim-tmux integration helper
@@ -74,10 +60,6 @@ bind-key -n C-\     if "$is_vim" "send C-\\"    "select-pane -l"
 # Alt-Up                               Zoom pane in/out
 bind-key -n M-Up resize-pane -Z
 
-# Alt-,/.                              Move focus among windows
-bind-key -n M-, select-window -p       # previous window
-bind-key -n M-. select-window -n       # next window
-
 # Alt-[/]                              Move focus among sessions
 bind-key -n M-[ switch-client -p
 bind-key -n M-] switch-client -n
@@ -89,73 +71,138 @@ bind-key -n M-S-Right display-panes \; split-window -h -c "#{pane_current_path}"
 bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
 
 
-# Shift-Up                             Enter scrollback mode
-bind-key -n S-Up    if "$is_vim" "send S-Up" "copy-mode"
-# Shift-Up/Down                        Copy mode: scroll up/down a half-page at a time
-bind-key -T copy-mode-vi S-Up   send -X halfpage-up
-bind-key -T copy-mode-vi S-Down send -X halfpage-down
-# bind-key -T copy-mode-vi
-# bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "$clipboard_copy_command"
-
-# Shift-F1
-bind-key -n S-F1 new-window -k -n "tmux help" "man tmux"
-
-# # F2                                   New window
-# bind-key -n F2 command-prompt -p \
-#   "[New window] Enter name or Ctrl-C to cancel:" \
-#   "new-window -c '#{pane_current_path}'; run-shell 'a=%%; tmux rename-window \${a:--}'"
-
-# Shift-F2                             Rename window
-bind-key -n S-F2 command-prompt -p \
-  "[Rename window] Enter name or Ctrl-C to cancel (current=#W):" \
-  "run-shell 'a=%%; tmux rename-window \${a:-#W}'"
-
-# # F3                                   New session
-# bind-key -n F3 command-prompt -p \
-#   "[New session] Enter name or Ctrl-C to cancel:" \
-#   "new-session; run-shell 'a=%%; tmux rename-session \${a:--}'"
-# # Shift-F3                             Rename session
-# bind-key -n S-F3 command-prompt -p \
-#   "[Rename session] Enter name or Ctrl-C to cancel (current=#S):" \
-#   "run-shell 'a=%%; tmux rename-session \${a:-#S} || true'"
-
-
-# # Alt-F3                          Expand pane to a full window
-# bind-key -n M-F3 break-pane
-# # Ctrl-F3                         Join window into a vertical split
-# bind-key -n C-F3 join-pane -h -s :. -t :-1
-
-
-# Ctrl-Shift-Left/Right                Swap the current split with another
-bind-key -n C-S-Left  display-panes \; swap-pane -s :. -t :.- \; select-pane -t :.-
-bind-key -n C-S-Right display-panes \; swap-pane -s :. -t :.+ \; select-pane -t :.+
-
-# Ctrl-Shift-Up                        Balance panes horizontally
-bind-key -n C-S-Up display-panes \; select-layout even-horizontal
-
-
-# F3/F4                                Move focus among windows
-bind-key -n C-F3 previous-window
-bind-key -n C-F4 next-window
-# Shift-F3/F4                          Move focus among splits
-bind-key -n S-F3 display-panes \; select-pane -t :.-
-bind-key -n S-F4 display-panes \; select-pane -t :.+
-# Ctrl-Shift-F3/F4                     Move a window
-bind-key -n C-S-F3 swap-window -t :-1
-bind-key -n C-S-F4 swap-window -t :+1
-
-#    Alt-F9                       Toggle sending keyboard input to all splits
-bind-key -n M-F9 display-panes \; set-window-option synchronize-panes
 
 
 
-# Plugins
+
+# =====================================
+# ===           Theme               ===
+# =====================================
+
+# Feel free to NOT use this variables at all (remove, rename)
+# this are named colors, just for convenience
+color_orange="colour166" # 208, 166
+color_purple="colour134" # 135, 134
+color_green="colour076" # 070
+color_blue="colour39"
+color_yellow="colour220"
+color_red="colour160"
+color_black="colour232"
+color_white="white" # 015
+
+# This is a theme CONTRACT, you are required to define variables below
+# Change values, but not remove/rename variables itself
+color_dark="$color_black"
+color_light="$color_white"
+color_session_text="$color_blue"
+color_status_text="colour245"
+color_main="$color_orange"
+color_secondary="$color_purple"
+color_level_ok="$color_green"
+color_level_warn="$color_yellow"
+color_level_stress="$color_red"
+color_window_off_indicator="colour088"
+color_window_off_status_bg="colour238"
+color_window_off_status_current_bg="colour254"
+
+# =====================================
+# ===    Appearence and status bar  ===
+# ======================================
+
+set -g mode-style "fg=default,bg=$color_main"
+
+# command line style
+set -g message-style "fg=$color_main,bg=$color_dark"
+
+# status line style
+set -g status-style "fg=$color_status_text,bg=$color_dark"
+
+# window segments in status line
+set -g window-status-separator ""
+separator_powerline_left=""
+separator_powerline_right=""
+
+# setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
+setw -g window-status-format " #I:#W "
+setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
+setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
+
+# when window has monitoring notification
+setw -g window-status-activity-style "fg=$color_main"
+
+# outline for active pane
+setw -g pane-active-border-style "fg=$color_main"
+
+# general status bar settings
+set -g status on
+set -g status-interval 5
+set -g status-position top
+set -g status-justify left
+set -g status-right-length 100
+
+# define widgets we're going to use in status bar
+# note, that this is not the complete list, some of them are loaded from plugins
+wg_session="#[fg=$color_session_text] #S #[default]"
+wg_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
+wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
+wg_user_host="#[fg=$color_secondary]#(whoami)#[default]@#H"
+wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
+# TODO: highlighted for nested local session as well
+wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
+
+set -g status-left "$wg_session"
+set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_date $wg_battery #{online_status}"
+
+# online and offline icon for tmux-online-status
+set -g @online_icon "#[fg=$color_level_ok]●#[default]"
+set -g @offline_icon "#[fg=$color_level_stress]●#[default]"
+
+# Configure view templates for tmux-plugin-sysstat "MEM" and "CPU" widget
+set -g @sysstat_mem_view_tmpl 'MEM:#[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
+
+# Configure colors for tmux-plugin-sysstat "MEM" and "CPU" widget
+set -g @sysstat_cpu_color_low "$color_level_ok"
+set -g @sysstat_cpu_color_medium "$color_level_warn"
+set -g @sysstat_cpu_color_stress "$color_level_stress"
+
+set -g @sysstat_mem_color_low "$color_level_ok"
+set -g @sysstat_mem_color_medium "$color_level_warn"
+set -g @sysstat_mem_color_stress "$color_level_stress"
+
+set -g @sysstat_swap_color_low "$color_level_ok"
+set -g @sysstat_swap_color_medium "$color_level_warn"
+set -g @sysstat_swap_color_stress "$color_level_stress"
+
+
+# Configure tmux-battery widget colors
+set -g @batt_color_full_charge "#[fg=$color_level_ok]"
+set -g @batt_color_high_charge "#[fg=$color_level_ok]"
+set -g @batt_color_medium_charge "#[fg=$color_level_warn]"
+set -g @batt_color_low_charge "#[fg=$color_level_stress]"
+
+# Configure tmux-prefix-highlight colors
+set -g @prefix_highlight_output_prefix '['
+set -g @prefix_highlight_output_suffix ']'
+set -g @prefix_highlight_fg "$color_dark"
+set -g @prefix_highlight_bg "$color_secondary"
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_secondary"
+
+
+# ============================
+# ===       Plugins        ===
+# ============================
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+
 
 set -g @yank_action 'copy-pipe'
 
@@ -165,6 +212,8 @@ set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 set -g @continuum-boot-options 'iterm'
 set -g @continuum-save-interval '30'
+
+set -g @open-S 'https://www.google.com/search?q='
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
