--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -118,14 +118,14 @@ set -g message-style "fg=$color_main,bg=$color_dark"
 set -g status-style "fg=$color_status_text,bg=$color_dark"
 
 # window segments in status line
-set -g window-status-separator ""
-separator_powerline_left=""
-separator_powerline_right=""
+set -g window-status-separator " "
+separator_powerline_left=""
+separator_powerline_right=""
 
 # setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
-setw -g window-status-format " #I:#W "
+setw -g window-status-format "#I:#W"
 setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
-setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
+setw -g window-status-current-format "#I:#W"
 
 # when window has monitoring notification
 setw -g window-status-activity-style "fg=$color_main"
@@ -143,15 +143,15 @@ set -g status-right-length 100
 # define widgets we're going to use in status bar
 # note, that this is not the complete list, some of them are loaded from plugins
 wg_session="#[fg=$color_session_text] #S #[default]"
-wg_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
-wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
+wg_battery="#{battery_status_fg}#{battery_percentage}"
+wg_date="#[fg=$color_secondary]%h %d %I:%M %P#[default]"
 wg_user_host="#[fg=$color_secondary]#(whoami)#[default]@#H"
 wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
 # TODO: highlighted for nested local session as well
 wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
 set -g status-left "$wg_session"
-set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_date $wg_battery #{online_status}"
+set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_date | $wg_battery #{online_status}"
 
 # online and offline icon for tmux-online-status
 set -g @online_icon "#[fg=$color_level_ok]●#[default]"
@@ -188,6 +188,17 @@ set -g @prefix_highlight_bg "$color_secondary"
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_secondary"
 
+set -g @yank_action 'copy-pipe'
+
+set -g @sidebar-tree-command 'tree -C -a -I ".cache|.git*" -L 10 --filelimit 30'
+
+set -g @continuum-boot 'on'
+set -g @continuum-restore 'on'
+set -g @continuum-boot-options 'iterm'
+set -g @continuum-save-interval '30'
+
+set -g @open-S 'https://www.google.com/search?q='
+
 
 # ============================
 # ===       Plugins        ===
@@ -203,17 +214,6 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
-
-set -g @yank_action 'copy-pipe'
-
-set -g @sidebar-tree-command 'tree -C -a -I ".cache|.git*" -L 10 --filelimit 30'
-
-set -g @continuum-boot 'on'
-set -g @continuum-restore 'on'
-set -g @continuum-boot-options 'iterm'
-set -g @continuum-save-interval '30'
-
-set -g @open-S 'https://www.google.com/search?q='
 
 
 # ==============================================
