--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -65,10 +65,10 @@ bind-key -n M-[ switch-client -p
 bind-key -n M-] switch-client -n
 
 # Alt-Shift-Left/Right/Up/Down         Create a new split in the given direction
-bind-key -n M-S-Left                   split-window -h -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
-bind-key -n M-S-Up                     split-window -v -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
-bind-key -n M-S-Right display-panes \; split-window -h -c "#{pane_current_path}"
-bind-key -n M-S-Down  display-panes \; split-window -v -c "#{pane_current_path}"
+bind-key -n M-S-Left  split-window -h -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
+bind-key -n M-S-Up    split-window -v -c "#{pane_current_path}" \; swap-pane -s :. -t :.- \; select-pane -t :.- \; display-panes
+bind-key -n M-S-Right split-window -h -c "#{pane_current_path}"
+bind-key -n M-S-Down  split-window -v -c "#{pane_current_path}"
 
 
 
@@ -190,7 +190,7 @@ set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_secondary"
 
 set -g @yank_action 'copy-pipe'
 
-set -g @sidebar-tree-command 'tree -C -a -I ".cache|.git*" -L 10 --filelimit 30'
+set -g @sidebar-tree-command 'command tree -C -a -I ".cache|.git*" -L 10 --filelimit 30'
 
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
@@ -207,6 +207,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
@@ -239,15 +240,15 @@ bind -T root F12  \
     set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[default] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
     set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
-    refresh-client -S \;\
+    refresh-client -S
 
 bind -T off F12 \
-  set -u prefix \;\
-  set -u key-table \;\
-  set -u status-style \;\
-  set -u window-status-current-style \;\
-  set -u window-status-current-format \;\
-  refresh-client -S
+    set -u prefix \;\
+    set -u key-table \;\
+    set -u status-style \;\
+    set -u window-status-current-style \;\
+    set -u window-status-current-format \;\
+    refresh-client -S
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
