fix tmux keybind

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -12,6 +12,7 @@ set -g  status-interval 2          # Update status frequently
 set -g  history-limit 50000        # Increase history size
 set -g  mouse on                   # Enable mouse mode
 set -g  renumber-windows on        # Renumber windows whenever any window is closed
+set -g  display-time 4000
 
 setw -g xterm-keys on
 setw -g aggressive-resize on
@@ -47,7 +48,7 @@ bind l select-pane -R
 
 
 # vim-tmux integration helper
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+is_vim="ps -o state= -o comm= | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 # Ctrl-Left/Right/Up/Down              Move focus among splits
 bind-key -n C-Up    if "$is_vim" "send C-Up"    "select-pane -U"
