new tmux keybind

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -45,6 +45,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# reset directory of new sessions. default current directory. Prompt for new one
+bind-key '~' command-prompt -I "#{pane_current_path}" -p "New dir:" "attach -c %1"
 
 
 # vim-tmux integration helper
