--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@
 
 /link/.newsboat/history.*
 
+# Don't commit tmux resurrect state.
+/link/.tmux/resurrect
+
 # Ignore any file with LOCAL in the name (good for per-machine vars/functions)
 *LOCAL*
 
