--- a/link/.ssh/config
+++ b/link/.ssh/config
@@ -1,10 +1,21 @@
+Host *
+
+# Forward ssh agent to the remote machine.
+ForwardAgent yes
+
+# Automatically add all common hosts to the host file as they are connected to.
+StrictHostKeyChecking no
+
+# Allow MacOS to use the keychain for SSH key passphrases
+IgnoreUnknown UseKeychain
+Host *
+  UseKeychain yes
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/id_rsa
+
 Host github.com
-    Hostname github.com
-    IdentityFile ~/.ssh/id_github
+  Hostname github.com
+  IdentityFile ~/.ssh/id_github
 Host bitbucket.org
-    Hostname bitbucket.org
-    IdentityFile ~/.ssh/id_bitbucket
-host 192.168.1.156
-    HostName Matthew-Denaburg-Laptop
-    IdentityFile ~/.ssh/id_windows.pub
-    user git
+  Hostname bitbucket.org
+  IdentityFile ~/.ssh/id_bitbucket
