change `git subup` alias

--- a/link/.gitconfig
+++ b/link/.gitconfig
@@ -25,7 +25,8 @@
 
   subup = !"git submodule update --init --recursive; \
         git submodule foreach --recursive git fetch; \
-        git submodule foreach git merge origin master"
+        git submodule foreach --recursive git pull --ff-only origin master; \
+        git submodule foreach --recursive git checkout master"
 
 [branch "master"]
   remote = origin
